--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <section id="slide1" data-anchor="slide1" class="section slide1">
                 <div class="row">
                     <div class="col-lg-12 offset-lg-1">
-                        <div class="text-with-bk ochablue">
+                        <div class="text-with-bk">
                             <h2 class="text-original"><span>What are access constraints?</span></h1>
                             <h2 class="text-duplicate"><span>What are access constraints?</span></h1>
                         </div>
@@ -116,11 +116,14 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6 offset-lg-1">
-                        <div class="text-with-bk col-lg-8 offset-lg-1">
+                        <div class="text-with-bk">
                             <p class="text-original"><span>Constraints span from dangers associated with conflict and insecurity; limitations implemented by parties to conflicts; bureaucratic impediments imposed by national and local authorities; and sanctions and counterterrorism measures that can make it difficult to deliver assistance in areas controlled by certain armed groups.</span></p>
                             <p class="text-duplicate"><span>Constraints span from dangers associated with conflict and insecurity; limitations implemented by parties to conflicts; bureaucratic impediments imposed by national and local authorities; and sanctions and counterterrorism measures that can make it difficult to deliver assistance in areas controlled by certain armed groups.</span></p>
                         </div>
                     </div>
+                </div>
+                <div class="caption">
+                    <p class="text-white text-right"><br><br>On 24 January 2015 in the Syrian Arab Republic, vehicles of the United Nations travel a dusty road lined with the rubble remnants of destroyed buildings, in the Old City of Homs, Homs Governorate.<br>Credit: UNICEF.</p>
                 </div>
             </section>
             <!--==========slide 2==========-->
@@ -128,7 +131,7 @@
             <section id="slide2" data-anchor="slide2" class="section slide2">
 
                 <div class="row">
-                    <div class="col-lg-5 offset-lg-1">
+                    <div class="col-lg-5 offset-lg-1" style="padding-top: 100px;">
                         <div class="text-with-bk">
                             <p class="text-original"><span>Outright fighting in Nigeria, Syria, Yemen and beyond challenge the ability to scale up. Aid and health workers all over the world endure attacks, including killing and maiming, arbitrary detention, sexual violence and looting of aid supplies. </span></p>
                             <p class="text-duplicate"><span>Outright fighting in Nigeria, Syria, Yemen and beyond challenge the ability to scale up. Aid and health workers all over the world endure attacks, including killing and maiming, arbitrary detention, sexual violence and looting of aid supplies. </span></p>
@@ -147,9 +150,7 @@
             <section id="slide3" data-anchor="slide3" class="section slide3">
 
                 <div class="row">
-                    <div class="col-lg-5 offset-lg-1">
-
-
+                    <div class="col-lg-6 offset-lg-1" style="padding-top: 100px;">
                         <div class="text-with-bk">
                             <p class="text-original"><span>In 1991, in order to ease the work of the humanitarian system as a whole, the UN General Assembly instituted the role of the UN Emergency Relief Coordinator who is specifically tasked with “facilitating, including through negotiation if needed, the acces by operational organizations to emergency areas for the rapid provision of emergency assistance by obtaining the consent of all parties concerned.”</span></p>
                             <p class="text-duplicate"><span>In 1991, in order to ease the work of the humanitarian system as a whole, the UN General Assembly instituted the role of the UN Emergency Relief Coordinator who is specifically tasked with “facilitating, including through negotiation if needed, the acces by operational organizations to emergency areas for the rapid provision of emergency assistance by obtaining the consent of all parties concerned.”
@@ -159,7 +160,7 @@
                     </div>
                 </div>
                 <div class="caption">
-                    <p class="text-white text-right"><span class="font-weight-bold">USA, 2017</span><br><br>New York, General Assembly.<br>Credit: OCHA/Matteo Minasi.</p>
+                    <p class="text-white text-right"><span class="font-weight-bold">USA, 2017</span><br><br>New York, General Assembly.<br>UN Photo/Manuel Elias</p>
                 </div>
 
             </section>
