--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
         <!--==========slide 0 Home==========-->
             <section id="slide0" data-anchor="slide0" class="section slide0">
-                <div class="row">
-                    <div class="col-lg-12 offset-lg-1 justify-content-md-center">
+                <div class="row head1">
+                    <div class="col-md-12 offset-lg-1 justify-content-md-center">
                         <div class="text-with-bk">
                             <h1 class="text-original"><span>Humanitarian Access</span></h1>
                             <h1 class="text-duplicate"><span>Humanitarian Access</span></h1>
@@ -85,8 +85,8 @@
                 <br>
                 <br>
                 </div>
-                <div class="row">
-                    <div class="col-lg-6 offset-lg-1">
+                <div class="row para1">
+                    <div class="col-md-6 offset-lg-1">
                         <div class="text-with-bk">
                             <p class="text-original"><span>Reaching vulnerable people who need life-saving assistance following an earthquake, a deadly outbreak, or in the middle of a war zone, is hugely challenging.</span></p>
                             <p class="text-duplicate"><span>Reaching vulnerable people who need life-saving assistance following an earthquake, a deadly outbreak, or in the middle of a war zone, is hugely challenging.</span></p>
@@ -102,20 +102,19 @@
                 <div class="caption">
                     <p class="text-white text-right"><span class="font-weight-bold">SOUTH SUDAN, 2014</span><br><br>The rains have already turned large areas of land into wetlands and made it almost impossible for aircraft to land.<br>Credit: OCHA/Jacob Zocherman.</p>
                 </div>
-
             </section>
             <!--==========slide 1 *no bk* ==========-->
             <section id="slide1" data-anchor="slide1" class="section slide1">
-                <div class="row">
-                    <div class="col-lg-12 offset-lg-1">
+                <div class="row head2">
+                    <div class="col-md-12 offset-lg-1">
                         <div class="text-with-bk">
                             <h2 class="text-original"><span>What are access constraints?</span></h1>
                             <h2 class="text-duplicate"><span>What are access constraints?</span></h1>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-6 offset-lg-1">
+                <div class="row para2">
+                    <div class="col-md-6 offset-lg-1">
                         <div class="text-with-bk">
                             <p class="text-original"><span>Constraints span from dangers associated with conflict and insecurity; limitations implemented by parties to conflicts; bureaucratic impediments imposed by national and local authorities; and sanctions and counterterrorism measures that can make it difficult to deliver assistance in areas controlled by certain armed groups.</span></p>
                             <p class="text-duplicate"><span>Constraints span from dangers associated with conflict and insecurity; limitations implemented by parties to conflicts; bureaucratic impediments imposed by national and local authorities; and sanctions and counterterrorism measures that can make it difficult to deliver assistance in areas controlled by certain armed groups.</span></p>
@@ -130,8 +129,8 @@
 
             <section id="slide2" data-anchor="slide2" class="section slide2">
 
-                <div class="row">
-                    <div class="col-lg-5 offset-lg-1" style="padding-top: 100px;">
+                <div class="row para3">
+                    <div class="col-md-5 offset-lg-1" style="padding-top: 100px;">
                         <div class="text-with-bk">
                             <p class="text-original"><span>Outright fighting in Nigeria, Syria, Yemen and beyond challenge the ability to scale up. Aid and health workers all over the world endure attacks, including killing and maiming, arbitrary detention, sexual violence and looting of aid supplies. </span></p>
                             <p class="text-duplicate"><span>Outright fighting in Nigeria, Syria, Yemen and beyond challenge the ability to scale up. Aid and health workers all over the world endure attacks, including killing and maiming, arbitrary detention, sexual violence and looting of aid supplies. </span></p>
@@ -140,7 +139,7 @@
                     </div>
                 </div>
                 <div class="caption">
-                    <p class="text-white text-right"><span class="font-weight-bold">SYRIA, 2015</span><br><br>Vehicles of the United Nations travel a dusty road lined with the rubble remnants of destroyed buildings, in the Old City of Homs, Homs Governorate.<br>Credit: UNICEF.</p>
+                    <p class="text-white text-right"><span class="font-weight-bold">Somalia, 2017</span><br><br>In the western desert town of Dinsoor, newly arrived drought victims rush toward food supplies delivered by the UN's World Food Program. <br>OCHA/Giles Clarke</p>
                 </div>
 
             </section>
@@ -149,8 +148,8 @@
 
             <section id="slide3" data-anchor="slide3" class="section slide3">
 
-                <div class="row">
-                    <div class="col-lg-6 offset-lg-1" style="padding-top: 100px;">
+                <div class="row para4">
+                    <div class="col-md-6 offset-lg-1" style="padding-top: 100px;">
                         <div class="text-with-bk">
                             <p class="text-original"><span>In 1991, in order to ease the work of the humanitarian system as a whole, the UN General Assembly instituted the role of the UN Emergency Relief Coordinator who is specifically tasked with “facilitating, including through negotiation if needed, the acces by operational organizations to emergency areas for the rapid provision of emergency assistance by obtaining the consent of all parties concerned.”</span></p>
                             <p class="text-duplicate"><span>In 1991, in order to ease the work of the humanitarian system as a whole, the UN General Assembly instituted the role of the UN Emergency Relief Coordinator who is specifically tasked with “facilitating, including through negotiation if needed, the acces by operational organizations to emergency areas for the rapid provision of emergency assistance by obtaining the consent of all parties concerned.”
@@ -160,15 +159,14 @@
                     </div>
                 </div>
                 <div class="caption">
-                    <p class="text-white text-right"><span class="font-weight-bold">USA, 2017</span><br><br>New York, General Assembly.<br>UN Photo/Manuel Elias</p>
+                    <p class="text-white text-right"><span class="font-weight-bold">New York, 2017</span><br><br>UN Emergency Relief Lowcock during a briefing to the Security Council on the humanitarian situation in Syria.<br> UN Photo/Manuel Elias</p>
                 </div>
 
             </section>
             <!--==========slide 4==========-->
             <section id="slide4" data-anchor="slide4" class="section slide4">
-                <div class="row">
-
-                    <div class="col-lg-12 offset-lg-1">
+                <div class="row head3">
+                    <div class="col-md-12 offset-lg-1">
                         <div class="text-with-bk">
                             <h2 class="text-original"><span>Humanitarian access<br>in the age of COVID-19</span></h2>
                             <h2 class="text-duplicate"><span>Humanitarian access<br>in the age of COVID-19</span></h2>
@@ -176,10 +174,8 @@
 
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-6 offset-lg-1">
-
-
+                <div class="row para5">
+                    <div class="col-md-6 offset-lg-1">
                         <div class="text-with-bk">
                             <p class="text-original"><span>Starting in 2019, the fast-spreading coronavirus has added a new layer of difficulties to humanitarian operations worldwide.
                                     How does the humanitarian community continue serving the most vulnerable people when public health measures restrict its movements, disrupt the life of the people it serves and challenges its supply chains?
@@ -208,8 +204,8 @@
                 <video data-keepplaying playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
                     <source src="img/airplanegif.mp4" type="video/mp4">
                 </video>
-                <div class="row">
-                    <div class="col-lg-6 offset-lg-1">
+                <div class="row para6">
+                    <div class="col-md-6 offset-lg-1">
 
 
                         <div class="text-with-bk">
@@ -232,22 +228,27 @@
                 <video data-keepplaying playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
                     <source src="img/airplanegif.mp4" type="video/mp4">
                 </video>
-                <div class="row">
-                    <div class="col-lg-7 offset-lg-1">
+                <div class="row para7">
+                    <div class="col-md-7 offset-lg-1">
                         <div class="text-with-bk">
-                            <p class="text-original"><span>In 2020, the humanitarian community has been working closely with governments for operations to continue and for humanitarian workers to be considered as essential staff. Other countries have issued “laissez-passer” rules for humanitarian staff, allowing them to cross borders or including them in the list of essential workers. In some instances, implementation of these exemptions remains uneven: some humanitarian flights have been grounded for weeks, and not all humanitarian actors have been allowed to resume movements or activities. The dialogue with concerned governments to address these challenges continues.
+                            <p class="text-original"><span>In 2020, the humanitarian community has been working closely with governments for operations to continue and for humanitarian workers to be considered as essential staff. Other countries have issued “laissez-passer” rules for humanitarian staff, allowing them to cross borders or including them in the list of essential workers.<br><br><br><br><br><br> In some instances, implementation of these exemptions remains uneven: some humanitarian flights have been grounded for weeks, and not all humanitarian actors have been allowed to resume movements or activities. The dialogue with concerned governments to address these challenges continues.
                                 </span></p>
-                            <p class="text-duplicate"><span>In 2020, the humanitarian community has been working closely with governments for operations to continue and for humanitarian workers to be considered as essential staff. Other countries have issued “laissez-passer” rules for humanitarian staff, allowing them to cross borders or including them in the list of essential workers. In some instances, implementation of these exemptions remains uneven: some humanitarian flights have been grounded for weeks, and not all humanitarian actors have been allowed to resume movements or activities. The dialogue with concerned governments to address these challenges continues.
+                            <p class="text-duplicate"><span>In 2020, the humanitarian community has been working closely with governments for operations to continue and for humanitarian workers to be considered as essential staff. Other countries have issued “laissez-passer” rules for humanitarian staff, allowing them to cross borders or including them in the list of essential workers.<br><br><br><br><br><br> In some instances, implementation of these exemptions remains uneven: some humanitarian flights have been grounded for weeks, and not all humanitarian actors have been allowed to resume movements or activities. The dialogue with concerned governments to address these challenges continues.
                                 </span></p>
                         </div>
                     </div>
                 </div>
+
+                <div class="caption">
+                    <p class="text-white text-right"><span class="font-weight-bold">XXXXX</span><br><br>XXXXX.<br>XXXXX.</p>
+                </div>
+
             </section>
             <!--==========slide 7==========-->
             <section id="slide7" data-anchor="slide7" class="section slide7">
 
-                <div class="row">
-                    <div class="col-lg-6 offset-lg-1">
+                <div class="row para8">
+                    <div class="col-md-6 offset-lg-1">
                         <div class="text-with-bk">
                             <p class="text-original"><span> In the field, humanitarian agencies are figuring out innovative ways to minimize the risk of COVID-19 while continuing to access people. The use of personal protective equipment, safe distancing, contactless biometrics, home delivery and other approaches are now the new normal. For instance, humanitarian agencies are increasing the proportion of emergency relief they can provide through digital money transfers on mobile phones over in-kind assistance. </span></p>
                             <p class="text-duplicate"><span> In the field, humanitarian agencies are figuring out innovative ways to minimize the risk of COVID-19 while continuing to access people. The use of personal protective equipment, safe distancing, contactless biometrics, home delivery and other approaches are now the new normal. For instance, humanitarian agencies are increasing the proportion of emergency relief they can provide through digital money transfers on mobile phones over in-kind assistance.</span></p>
@@ -263,8 +264,8 @@
             <!--==========slide 8==========-->
             <section id="slide8" data-anchor="slide8" class="section slide8">
 
-                <div class="row">
-                    <div class="col-lg-6 offset-lg-1">
+                <div class="row para9">
+                    <div class="col-md-7 offset-lg-1">
 
 
                         <div class="text-with-bk">
