--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
             <section id="slide5" data-anchor="slide5" class="section slide5 video-background-holder">
                 <video data-keepplaying playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-                    <source src="img/airplanegif.mp4" type="video/mp4">
+                    <source src="img/airplane1gif.mp4" type="video/mp4">
                 </video>
                 <div class="row para6">
                     <div class="col-md-6 offset-lg-1">
@@ -226,7 +226,7 @@
             <!--==========slide 6 *no bk* ==========-->
             <section id="slide6" data-anchor="slide6" class="section slide6 video-background-holder">
                 <video data-keepplaying playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-                    <source src="img/airplanegif.mp4" type="video/mp4">
+                    <source src="img/airplane1gif.mp4" type="video/mp4">
                 </video>
                 <div class="row para7">
                     <div class="col-md-7 offset-lg-1">
