Yemen file changes

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <section id="slide2" data-anchor="slide2" class="section slide2">
 
                 <div class="row para3">
-                    <div class="col-md-5 offset-lg-1" style="padding-top: 100px;">
+                    <div class="col-md-6 offset-lg-1" style="padding-top: 100px;">
                         <div class="text-with-bk">
                             <p class="text-original"><span>Outright fighting in Nigeria, Syria, Yemen and beyond challenge the ability to scale up. Aid and health workers all over the world endure attacks, including killing and maiming, arbitrary detention, sexual violence and looting of aid supplies. </span></p>
                             <p class="text-duplicate"><span>Outright fighting in Nigeria, Syria, Yemen and beyond challenge the ability to scale up. Aid and health workers all over the world endure attacks, including killing and maiming, arbitrary detention, sexual violence and looting of aid supplies. </span></p>
@@ -229,11 +229,11 @@
                     <source src="img/airplane1gif.mp4" type="video/mp4">
                 </video>
                 <div class="row para7">
-                    <div class="col-md-7 offset-lg-1">
+                    <div class="col-md-9 offset-lg-1">
                         <div class="text-with-bk">
-                            <p class="text-original"><span>In 2020, the humanitarian community has been working closely with governments for operations to continue and for humanitarian workers to be considered as essential staff. Other countries have issued “laissez-passer” rules for humanitarian staff, allowing them to cross borders or including them in the list of essential workers.<br><br><br><br><br><br> In some instances, implementation of these exemptions remains uneven: some humanitarian flights have been grounded for weeks, and not all humanitarian actors have been allowed to resume movements or activities. The dialogue with concerned governments to address these challenges continues.
+                            <p class="text-original"><span>In 2020, the humanitarian community has been working closely with governments for operations to continue and for humanitarian workers to be considered as essential staff. Other countries have issued “laissez-passer” rules for humanitarian staff, allowing them to cross borders or including them in the list of essential workers. In some instances, implementation of these exemptions remains uneven: some humanitarian flights have been grounded for weeks, and not all humanitarian actors have been allowed to resume movements or activities. The dialogue with concerned governments to address these challenges continues.
                                 </span></p>
-                            <p class="text-duplicate"><span>In 2020, the humanitarian community has been working closely with governments for operations to continue and for humanitarian workers to be considered as essential staff. Other countries have issued “laissez-passer” rules for humanitarian staff, allowing them to cross borders or including them in the list of essential workers.<br><br><br><br><br><br> In some instances, implementation of these exemptions remains uneven: some humanitarian flights have been grounded for weeks, and not all humanitarian actors have been allowed to resume movements or activities. The dialogue with concerned governments to address these challenges continues.
+                            <p class="text-duplicate"><span>In 2020, the humanitarian community has been working closely with governments for operations to continue and for humanitarian workers to be considered as essential staff. Other countries have issued “laissez-passer” rules for humanitarian staff, allowing them to cross borders or including them in the list of essential workers. In some instances, implementation of these exemptions remains uneven: some humanitarian flights have been grounded for weeks, and not all humanitarian actors have been allowed to resume movements or activities. The dialogue with concerned governments to address these challenges continues.
                                 </span></p>
                         </div>
                     </div>
