Yemen file - text changes

--- a/yemen.html
+++ b/yemen.html
@@ -159,7 +159,7 @@
         <!--==========slide 4 *no bk* ==========-->
         <section id="slide4" data-anchor="slide4" class="section slide4">
             <div class="row para5">
-                <div class="col-lg-4 offset-lg-1">
+                <div class="col-md-5 offset-lg-1">
                     <div class="text-with-bk">
                         <p class="text-original"><span>The DLT informs the Saudi-Led Coalition’s EHOC of the locations of humanitarian static locations and humanitarian movements in Yemen aiming to ensure the safety and security of humanitarian premises, personnel, equipment and activities in areas of active military operations.
                             </span></p>
